[project]
name = "FishBroWFS_V2"
version = "0.1.0"
description = "Speed-first backtesting engine"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["slow: research-grade tests"]
addopts = "-m 'not slow'"

